# MDI_PDE_2030

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.toml  Agrint.py  Control.py  MDI.xls  MDI2.xlsx  Makefile  Pontos de inconsistência.docx  Principal.py  README.md  RecebeDados.py  Sistema.py  Usina.py  pyproject.toml  requirements.txt  settings.local.toml  settings.toml
Entrada/: MDI2.xlsx
docs/: Pontos relevantes.docx
install/Coopr-4.0.9597/: CHANGELOG.txt  PKG-INFO  README.txt  setup.py
install/Coopr-4.0.9597/Coopr.egg-info/: SOURCES.txt
setup/: Agrint.py  Control.py  GeraResumo.py  Problema.py  Projeto.py  RecebeDados.py  Renovavel.py  Restricoes.py  ResumoExecutivo.py  SaidaDados.py  SaidaNewave.py  Sistema.py  Termica.py  UHE.py  Usina.py
src/: find_object.py  init_loguru.py  logger.py  onedrive.py  prompt_data.py  run_command.py  s3_filter.py
