[tool.poetry]
name = "mdi_pde_2030"
version = "0.1.0"
description = ""
authors = ["Renan de Souza Carvalho <renan2.scarvalho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Coopr = "^4.0.9597"
jsonpickle = "^2.1.0"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
python-dateutil = "^2.8.2"
pywin32 = { file = "install/pywin32-303-cp38-cp38-win_amd64.whl" }
pypiwin32 = "^223"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
