[tool.poetry]
name = "mdi_pde_2030"
version = "0.1.0"
description = ""
authors = ["Renan de Souza Carvalho <renan2.scarvalho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Coopr = "^4.0.9597"
jsonpickle = "^2.1.0"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
python-dateutil = "^2.8.2"
# pywin32 = { file = "install/pywin32-303-cp38-cp38-win_amd64.whl" }
# pypiwin32 = "^223"
colorama = "^0.4.4"
termcolor = "^1.1.0"
dynaconf = "^3.1.7"
Jinja2 = "^3.1.1"
loguru = "^0.5.3"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = {version = "^21.7b0", allow-prereleases = true}
flake8 = "^3.9.2"
pylint = "^2.9.3"
autoflake = "^1.4"
isort = "^5.9.2"
mypy = "^0.910"
pre-commit = "^2.13.0"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
